--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.3.8"
+    "yup": "^1.2.0",
+    "zustand": "^4.3.8",
+    "zustand-persist": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
